00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-todo-app
  labels:
    name: smart-todo-app
    project: kubernetes-esgi
