09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-todo-app-ingress
  namespace: smart-todo-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /redoc
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /create_task
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /get_task
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /task
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      # Route pour le frontend (EN DERNIER pour catch-all)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
